silent login and global logout fixed

--- a/BffDemo.NoBffApplication/BffDemo.NoBffClient/public/silent-refresh.html
+++ b/BffDemo.NoBffApplication/BffDemo.NoBffClient/public/silent-refresh.html
@@ -6,7 +6,10 @@
 </head>
   <body>
     <script>
-      window.parent.postMessage(window.location.hash, window.location.origin);
+      (window.parent || window.opener).postMessage(
+        location.hash || '#' + location.search,
+        location.origin
+      );
     </script>
   </body>
 </html>
